--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 </a>
                 <div class="row">
                     <div class="col-12 col-md-6 offset-md-1 info pt-2">
-                        <h3>Про нас</h3>
+                        <h2>Про нас</h2>
                         <p>RadioKPI — це не просто кілька кпішників, які люблять музику. Це яскрава команда, де кожен — особистість, бо йдуть по своєму творчому шляху, тим самим створюючи своє RadioKPI.<br>Вони приходять і майже живуть у підпіллі RadioKPI,
                             щоб ви почули та побачили краще. <br>RadioKPI — це не просто музика, а черговий привід прогулятись по Політехнічній, замовивши свою улюблену пісню, або посидіти на Поляні з друзями та поспілкуватися з ведучими через нашого
                             бота.<br></p>
                         <p>Зробимо таке радіо, яке би слухали самі!</p>
                     </div>
-                    <div class="col-12 col-md-3 offset-md-1 meta" style="padding-left: 0;">
-                        <div class="shadow-none contact-info portfolio-info-card" style="min-width: 270px;">
-                            <h2><strong>Посилання</strong></h2>
+                    <div class="col-12 col-md-3 offset-md-1 pt-2">
+                        <h2>Посилання</h2>
+                        <div class="shadow-none contact-info portfolio-info-card p-0" style="min-width: 270px;">
                             <div class="row" style="font-weight: bold;">
                                 <div class="col-1"><i class="icon ion-android-send icon"></i></div>
                                 <div class="col-9"><a href="https://t.me/kpiradio_bot">Замовити пісню</a></div>
