--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>RadioKPI</title>
+    
+    <meta name="twitter:description" content="Радіо кращого технічного вишу.">
+    <meta name="twitter:card" content="summary">
+    <meta name="description" content="Радіо кращого технічного вишу.">
+    <meta name="twitter:image" content="assets/logo.jpg">
+    <meta name="twitter:title" content="RADIO KPI">
+    <link rel="icon" type="image/png" sizes="32x32"   href="assets/favicon/favicon32.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/favicon/favicon180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/favicon192.png">
+    <link rel="manifest"   href="assets/manifest.json">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
