--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
             <div id="current-song-box">
                 <div style="display: inline-flex;align-items: center;"><button class="btn btn-primary img-fluid" id="playcircle" type="button"></button>
                     <p class="text-capitalize" id="current-song-name">Sunset Lover - Petit Biscuit<br></p>
-                </div><img id="headphones-img" src="assets/img/headphones.svg"></div><input type="range" orient="vertical"></section>
+                </div>
+                <img id="headphones-img" src="assets/img/headphones.svg">
+            </div>
+            <input type="range" orient="vertical"></section>
         <section id="playlist" class="container">
             <div id="history-header">
                 <p>раніше</p>
-                <div><a id="history-button" href="https://t.me/rkpi_music"></a><a id="add-song-button" href="https://t.me/kpiradio_bot"></a></div>
+                <div>
+                    <a id="history-button" href="https://t.me/rkpi_music"></a>
+                    <a id="add-song-button" href="https://t.me/kpiradio_bot"></a>
+                </div>
             </div>
             <ul id="song-list" class="text-wrap">
                 <li class="text-wrap"><a id="history-url-first" href="#">Sunset Lover - Petit Biscuit</a></li>
