Redesigned mobile layout; desktop layout is WIP

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body id="body-section" class="container-fluid">
     <div id="main-page">
-        <header><img class="img-fluid float-right" src="assets/img/header-logo.svg"></header>
+        <header><img class="img-fluid" src="assets/img/header-logo.svg"></header>
         <section id="play-section" class="container">
             <div id="current-song-box">
                 <div style="display: inline-flex;align-items: center;"><button class="btn btn-primary img-fluid" id="playcircle" type="button"></button>
@@ -46,7 +46,10 @@
             </ul>
         </section>
     </div>
-    <footer class="footer-basic text-center" data-classes="fixed-bottom" style="width: 100%;"><img src="assets/img/footer-logo.svg" style="padding-top: 1.25rem;padding-left: 1rem;padding-right: 1rem;"><a id="footer-link" class="text-center" href="#" style="padding: 1.25rem;padding-bottom: 1.375rem;">Є питання?</a></footer>
+    <footer class="footer-basic text-center" data-classes="fixed-bottom" style="width: 100%;">
+        <img id="footer-img" src="assets/img/footer-logo.svg">
+        <a id="footer-link" class="text-center" href="#">Є питання?</a>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </body>
