--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html style="height: auto;width: auto;">
+<html style="height: auto; width: auto;" lang="uk">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>RadioKPI</title>
     
@@ -16,45 +16,80 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/favicon192.png">
     <link rel="manifest"   href="assets/manifest.json">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body id="body-section" class="container-fluid">
     <div id="main-page">
-        <header><img class="img-fluid" src="assets/img/header-logo.svg"></header>
+        <header><img class="img-fluid" src="assets/img/header-logo.svg" alt="RadioKPI"></header>
         <section id="play-section" class="container">
             <div id="current-song-box">
                 <div style="display: inline-flex;align-items: center;">
-                    <button class="btn btn-primary img-fluid" id="playcircle" type="button"></button>
-                    <p class="text-capitalize" id="current-song-name">Sunset Lover - Petit Biscuit<br></p>
+                    <button class="btn btn-primary img-fluid"
+                            id="play-btn" type="button" aria-label="Play music">
+                    </button>
+                    <p class="text-capitalize" id="current-song-name">Sunset Lover - Petite Biscuit</p>
                 </div>
-                <img id="headphones-img" src="assets/img/headphones.svg">
+                <img id="headphones-img" src="assets/img/headphones.svg" alt="headphones">
             </div>
-            <input type="range" orient="vertical">
+            <label><input type="range" orient="vertical"></label>
+            <p id="add-song-link-wrapper">
+                <a id="add-song-link" href="https://t.me/kpiradio_bot">замовити трек</a>
+            </p>
         </section>
         <section id="playlist" class="container">
             <div id="history-header">
                 <p>раніше</p>
                 <div>
-                    <a id="history-button" href="https://t.me/rkpi_music"></a>
-                    <a id="add-song-button" href="https://t.me/kpiradio_bot"></a>
+                    <a id="history-button" href="https://t.me/rkpi_music">
+                        <!--<img src="assets/img/history-button.svg" alt="Що грало?"/>-->
+                        <svg id="history-button" width="24" height="25" viewBox="0 0 24 25" stroke="white" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <title>Що грало?</title>
+                            <g opacity="1">
+                                <path d="M18.5528 4.77423H4.88237C3.8038 4.77423 2.92944 5.64859 2.92944 6.72716V20.3976C2.92944 21.4762 3.8038 22.3506 4.88237 22.3506H18.5528C19.6314 22.3506 20.5058 21.4762 20.5058 20.3976V6.72716C20.5058 5.64859 19.6314 4.77423 18.5528 4.77423Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M7.81177 2.82132V6.72717" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M15.6235 2.82132V6.72717" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M11.8162 18.3134C14.1636 18.3134 16.0666 16.4104 16.0666 14.0629C16.0666 11.7154 14.1636 9.81244 11.8162 9.81244C9.46868 9.81244 7.56567 11.7154 7.56567 14.0629C7.56567 16.4104 9.46868 18.3134 11.8162 18.3134Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M11.8162 12.2413V14.0629L12.727 14.9737" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                        </svg>
+                    </a>
+                    <a id="add-song-button" href="https://t.me/kpiradio_bot">
+                        <!-- <img src="assets/img/add-song-button.svg" alt="Замовити трек"/> -->
+                        <svg id="add-song-button" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="white">
+                            <title>Замовити трек</title>
+                            <g opacity="1">
+                                <path d="M19.2897 4.77423H5.61919C4.54061 4.77423 3.66626 5.64859 3.66626 6.72716V20.3976C3.66626 21.4762 4.54061 22.3506 5.61919 22.3506H19.2897C20.3682 22.3506 21.2426 21.4762 21.2426 20.3976V6.72716C21.2426 5.64859 20.3682 4.77423 19.2897 4.77423Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M16.3604 2.82132V6.72717" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M8.54858 2.82132V6.72717" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M12.771 9.10233V17.9697" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M8.3374 13.536H17.2047" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </g>
+                        </svg>
+                    </a>
                 </div>
             </div>
             <ul id="song-list" class="text-wrap">
                 <!-- id's "history-url-*" are provided to make dynamic content changes -->
-                <li class="text-wrap"><a id="history-url-first" href="#">Sunset Lover - Petit Biscuit</a></li>
+                <li class="text-wrap"><a id="history-url-first" href="#">Sunset Lover - Petite Biscuit</a></li>
                 <li><a id="history-url-second" href="#">High Hopes - Kodaline</a></li>
                 <li><a id="history-url-third" href="#">Promise - Ben Howard</a></li>
                 </ul>
         </section>
     </div>
     <footer class="footer-basic text-center" data-classes="fixed-bottom" style="width: 100%;">
-        <img id="footer-img" src="assets/img/footer-logo.svg">
-        <a id="footer-link" class="text-center" href="#">Є питання?</a>
+        <img id="footer-img" src="assets/img/footer-logo.svg" alt="RadioKPI. Радіо студентів КПІ">
+        <a id="footer-link" class="text-center" href="https://t.me/rhub_kpi">Є питання?</a>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+            crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
